--- a/docroot/themes/custom/dcd19/assets/sass/_front.scss
+++ b/docroot/themes/custom/dcd19/assets/sass/_front.scss
@@ -1,19 +1,17 @@
-@import "fonts";
-@import "variables";
-
 .path-frontpage {
-  .header {
-    display: none;
+  #navbar {
+    position: absolute;
+    top: -50%;
+    transition: top 1s cubic-bezier(0.190,1.000,0.220,1.000);
   }
   .row {
     margin: 0;
   }
 
   &.navbar-fixed {
-    .header {
-      background: $white;
-      box-shadow:  0px 4px 4px rgba(217, 224, 231, 0.25);
-      display: flex;
+    #navbar {
+      position: fixed;
+      top: 0;
     }
   }
 
