--- a/docroot/themes/custom/dcd19/assets/sass/_variables.scss
+++ b/docroot/themes/custom/dcd19/assets/sass/_variables.scss
@@ -905,3 +905,6 @@ $col-subtitle2-text-size:     12px;
 $input-outline:               $blue-darkest;
 
 $placeholder-color:           #b3bace;
+$footer-gradient-left:        #1049B2;
+$footer-gradient-right:       #0acaff;
+$subscribe-button:            #0065bb;
